Refactorización de un poco de código. Principios para poder editar el usuario creado